--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,64 +1,57 @@
-.container{
-    display: grid;
-    gap:0,5rem;
-    grid-auto-flow: dense;
-    grid-auto-rows: 3rem;
-   grid-template-columns: repeat(auto-fit,minmax(6rem,1fr));
-   padding-bottom:10px;
-  }
+.flex-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
-.tag-skill-1{
-    color: rgb(0, 0, 0);
-    padding: 0.2rem 0.5rem;
-    margin: 0.2rem;
-    font-size: 12px;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-	height: 20px;
-	width: 80px;
+
+.social-links {
+  display: grid;
+  gap:1rem;
+  grid-auto-flow: dense;
+  grid-auto-rows: 3rem;
+ grid-template-columns: repeat(auto-fit,minmax(5rem,1fr));
+ padding-bottom:10px;
+}
+
+.social-btn {
+	cursor: pointer;
+	height: 50px;
+	width: 50px;
+	font-family: 'Titillium Web', sans-serif;
+	color: #333;
 	border-radius: 10px;
 	box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
-	margin: 3px;
+	background: white;
+	margin: 5px;
+	transition: 1s;
 }
-.tag-skill-2{
-  color: rgb(0, 0, 0);
-  padding: 0.2rem 0.5rem;
-  margin: 0.2rem;
-  font-size: 12px;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-height: 20px;
-width: 50px;
-border-radius: 10px;
-box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
-margin: 3px;
+
+.social-btn span {
+	width: 0px;
+	overflow: hidden;
+	transition: 1s;
+	text-align: center;
 }
-.firebase{
-  background: #fad868;
+
+.social-btn:hover {
+	width: 150px;
+	border-radius: 5px;
 }
-.cSharp{
-  background: #9f73d7;
+
+.social-btn:hover span {
+	padding: 2px;
+	width: max-content;
 }
-  .java{
-    background: #f77051;
-  }
-  .nodejs{
-    background: #62aa61;
-  }
-  .js{
-    background: #f8ec8e;
-  }
-  .android{
-    background: #a7c93a;
-  }
-  .react{
-    background: #b2f0ff;
-  }
-  .mysql{
-    background: #70a8c0;
-  }
-  .chakra{
-    background: #82c7c0;
-  }
+
+#twitter svg {
+	fill: #1da1f2;
+}
+
+#linkedin svg {
+	fill: #0e76a8;
+}
+
+#github {
+	fill: #333;
+}
