--- a/src/index.css
+++ b/src/index.css
@@ -21,95 +21,11 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: -350px;
+
 }
 
-.react-chatbot-kit-chat-header {
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-  background: #005e54;
-  color: #fff;
-  font-family: Arial;
-  display: flex;
-  align-items: center;
-  font-size: 1rem;
-  padding: 12.5px;
-  font-weight: bold;
-}
-.react-chatbot-kit-user-chat-message {
-  background-color: #e1ffc7;
-  padding: 10px;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  color: #585858;
-  font-weight: medium;
-  position: relative;
-  text-align: left;
-}
-.react-chatbot-kit-user-chat-message-arrow {
-  width: 0;
-  height: 0;
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-left: 8px solid #e1ffc7;
-  position: absolute;
-  right: -7px;
-  top: 13px;
-}
-
-.react-chatbot-kit-chat-bot-message-arrow {
-  width: 0;
-  height: 0;
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-right: 8px solid #f1f1f1;
-  position: absolute;
-  left: -7px;
-  top: 13px;
-}
-
-.react-chatbot-kit-chat-input {
-  width: 100%;
-  padding: 12.5px;
-  border: none;
-  font-size: 0.85rem;
-  border-top: 1px solid #d8d8d8;
-  border-bottom-left-radius: 5px;
-}
-.react-chatbot-kit-chat-btn-send {
-  background-color: #075e54;
-  width: 100px;
-  border: none;
-
-  border-bottom-right-radius: 5px;
-}
-
-.react-chatbot-kit-chat-container {
-  position: relative;
-  width: 675px;
-}
-.react-chatbot-kit-user-avatar-icon {
-  fill: #fff;
-  width: 25px;
-  height: 25px;
-}
-.react-chatbot-kit-chat-btn-send-icon {
-  fill: #fff;
-  width: 25px;
-}
-.react-chatbot-kit-chat-bot-message {
-  background-color: #f1f1f1;
-  padding: 10px;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  color: #000;
-  font-weight: medium;
-  position: relative;
-  margin-left: auto;
-  text-align: left;
-}
 .react-chatbot-kit-chat-inner-container {
-  background: #efe7dd
+  background: 
     url("https://cloud.githubusercontent.com/assets/398893/15136779/4e765036-1639-11e6-9201-67e728e86f39.jpg")
     repeat;
   border-radius: 3px;
@@ -119,112 +35,4 @@ code {
 .react-chatbot-kit-chat-message-container {
   padding: 0 17.5px 10px 17.5px;
   overflow: scroll;
-}
-
-@media (min-width: 1281px) {
-  .App {
-    margin-left: -660px;
-  }
-  .react-chatbot-kit-chat-container {
-    width: 900px;
-  }
-  .react-chatbot-kit-chat-bot-message {
-    width: 900px;
-  }
-  .react-chatbot-kit-chat-inner-container {
-    height: 620px;
-  }
-  .react-chatbot-kit-chat-message-container {
-    height: 540px;
-  }
-}
-
-@media (min-width: 1025px) and (max-width: 1280px) {
-  .App {
-    margin-left: -560px;
-  }
-  .react-chatbot-kit-chat-container {
-    width: 900px;
-  }
-  .react-chatbot-kit-chat-bot-message {
-    width: 900px;
-  }
-  .react-chatbot-kit-chat-inner-container {
-    height: 620px;
-  }
-  .react-chatbot-kit-chat-message-container {
-    height: 540px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1024px) {
-  .App {
-    margin-left: -460px;
-  }
-  .react-chatbot-kit-chat-container {
-    width: 760px;
-  }
-  .react-chatbot-kit-chat-bot-message {
-    width: 760px;
-  }
-  .react-chatbot-kit-chat-inner-container {
-    height: 1024px;
-  }
-  .react-chatbot-kit-chat-message-container {
-    height: 944px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  .App {
-    margin-left: -500px;
-  }
-  .react-chatbot-kit-chat-container {
-    width: 800px;
-  }
-  .react-chatbot-kit-chat-bot-message {
-    width: 800px;
-  }
-  .react-chatbot-kit-chat-inner-container {
-    height: 720px;
-  }
-  .react-chatbot-kit-chat-message-container {
-    height: 640px;
-  }
-}
-
-@media (min-width: 481px) and (max-width: 767px) {
-  .App {
-    margin-left: -240px;
-  }
-  .react-chatbot-kit-chat-container {
-    width: 540px;
-  }
-  .react-chatbot-kit-chat-bot-message {
-    width: 540px;
-  }
-  .react-chatbot-kit-chat-inner-container {
-    height: 320px;
-  }
-  .react-chatbot-kit-chat-message-container {
-    height: 240px;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 480px) {
-  .App {
-    margin-left: -20px;
-  }
-  .react-chatbot-kit-chat-container {
-    width: 320px;
-  }
-  .react-chatbot-kit-chat-bot-message {
-    width: 320px;
-  }
-  .react-chatbot-kit-chat-inner-container {
-    height: 560px;
-  }
-  .react-chatbot-kit-chat-message-container {
-    height: 480px;
-  }
 }
