--- a/src/components/ListProyect/ListProyect.css
+++ b/src/components/ListProyect/ListProyect.css
@@ -1,81 +1,68 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-.container {
+.container-2 {
   display: flex;  
   flex-wrap: wrap;
 }
+.card-image {
+	display: block;
+	min-height: 15rem;
+	background: #fff center center no-repeat;
+	background-size: cover;
+}
+
+.card-image > img {
+	display: block;
+	width: 100%;
+	opacity: 0; 
+}
+
+.card-image.is-loaded {
+	filter: none; 
+	transition: filter 1s;
+}
+
+.card-list {
+	display: block;
+	margin: 1rem auto;
+	padding: 0;
+	font-size: 0;
+	text-align: center;
+	list-style: none;
+}
+
 .card {
-  margin: 10px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-  width: 250px;
-}
-.card-header img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-.card-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 0px 0px 10px 10px;
-  min-height: 50px;
-}
-.tag-container-grid {
-  display: flex;
-  margin-top: -15px;
-  margin-bottom: 10px;
-  width: 200px;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
-.button-container-grid {
-  display: flex;
-  flex-wrap: wrap;
-}
-.button-container-grid a{
-text-decoration: none;
-color: #fff;
-width:220px;
-height:20px;
-font-size: 15px;
-background-color:#cccccc;
-}
-.tag {
-  background: #cccccc;
-  border-radius: 50px;
-  font-size: 12px;
-  margin: 1px;
-  color: #fff;
-  padding: 1px 6px;
-  text-transform: uppercase;
-}
-.java{
-  background: #ee4f33;
-}
-.nodejs{
-  background: #026e00;
-}
-.js{
-  background: #f7df1e;
-}
-.android{
-  background: #a7c93a;
-}
-.react{
-  background: #61DBFB;
-}
-.mysql{
-  background: #005e87;
-}
-.chakra{
-  background: #4fd1c5;
+	display: inline-block;
+	width: 90%;
+	max-width: 20rem;
+	margin: 1rem;
+	text-decoration: none;
+	overflow: hidden;
+	box-shadow: 0 0 3rem -1rem rgba(0,0,0,0.5);
+	transition: transform 0.1s ease-in-out, box-shadow 0.1s;
 }
 
+.card:hover {
+	transform: scale(1.2);
+	box-shadow: 0 0.5em 3rem -1rem rgba(0,0,0,0.5);
+}
 
+.card-description {
+	display: block;
+	padding: 1em 0.5em;
+	color: #ffffff;
+	text-decoration: none;
+  background-color: #cdffe8;
+}
 
+.card-description > h2 {
+  color:#6aa389;
+	margin: 0 0 0.5em;
+  font-size: 1rem;
+}
 
+.card-description > p {
+  color: #82c7a8;
+  font-size: 0.8rem;
+	margin: 0;
+}
